added test cases in TransactionDataFetcherTest. Corrected some methods in TransactionDataFetcher and added logs in TransactionServiceImpl